--- a/package.json
+++ b/package.json
@@ -1,27 +1,34 @@
 {
-  "name": "load-monitoring",
+  "name": "@telmaantunes/load-monitoring",
   "version": "0.0.0",
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --open",
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
+    "test": "pnpm test:unit & pnpm build & pnpm test:e2e",
     "test:unit": "vitest",
-    "prepare": "cypress install",
     "test:e2e": "start-server-and-test preview http://localhost:4173 'cypress run --e2e'",
     "test:e2e:dev": "start-server-and-test 'vite dev --port 4173' http://localhost:4173 'cypress open --e2e'",
     "build-only": "vite build",
     "type-check": "vue-tsc --build",
-    "lint": "eslint . --fix",
-    "format": "prettier --write src/"
+    "lint": "pnpm lint:script && pnpm lint:style",
+    "lint:script": "eslint . --fix",
+    "lint:style": "stylelint --fix \"**/*.{vue,scss}\" ",
+    "format": "prettier --write src/",
+    "prepare": "cypress install"
   },
   "dependencies": {
     "pinia": "^3.0.1",
+    "pinia-plugin-persistedstate": "^4.2.0",
+    "socket.io-client": "^4.8.1",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vue3-apexcharts": "^1.8.0"
   },
   "devDependencies": {
+    "@pinia/testing": "^1.0.0",
     "@tsconfig/node22": "^22.0.0",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^22.13.9",
@@ -39,7 +46,14 @@
     "jsdom": "^26.0.0",
     "npm-run-all2": "^7.0.2",
     "prettier": "3.5.3",
+    "sass-embedded": "^1.86.0",
     "start-server-and-test": "^2.0.10",
+    "stylelint": "^16.16.0",
+    "stylelint-config-recommended-vue": "^1.6.0",
+    "stylelint-config-standard-scss": "^14.0.0",
+    "stylelint-declaration-strict-value": "^1.10.11",
+    "stylelint-scss": "^6.11.1",
+    "stylelint-selector-bem-pattern": "^4.0.1",
     "typescript": "~5.8.0",
     "vite": "^6.2.1",
     "vite-plugin-vue-devtools": "^7.7.2",
